--- a/html/Index.html
+++ b/html/Index.html
@@ -21,10 +21,33 @@
                             <div class="card-front">
                                 <div class="center-wrap">
                                     <div class="section text-center">
+                                        <!--Sign up-->
                                         <h3 class="mb-4 pb-3">Sign up</h3>
                                         <div class="form-group">
-
+                                            <label for="Usuario">Usuario</label>
+                                            <input type="text" id="Usuario" class="form-control" placeholder="Ingrese Usuario">
+                                            <i class="input-icon uil uil-user"></i>
+                                            <div id=errorusuario class="alert alert-danger" role="alert"></div>
                                         </div>
+                                        <div class="form-group">
+                                            <label for="email">Email</label>
+                                            <input type="text" id="email" class="form-control" placeholder="nombreemail@email.com">
+                                            <i class="input-icon uil uil-at"></i>
+                                            <div id=erroremail class="alert alert-danger" role="alert"></div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="contraseña">Contraseña</label>
+                                            <input type="text" id="contraseña" class="form-control" placeholder="Ingresa Contraseña">
+                                            <i class="input-icon uil uil-lock-alt"></i>
+                                            <div id=errorcontra class="alert alert-danger" role="alert"></div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="contraseña">Repite Contraseña</label>
+                                            <input type="text" id="repcontraseña" class="form-control" placeholder="Repita Contraseña">
+                                            <i class="input-icon uil uil-lock-alt"></i>
+                                            <div id=errorcontra2 class="alert alert-danger" role="alert"></div>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
