Se agrega Buttons
Agregamos los botones Enviar y Limpiar

--- a/html/Index.html
+++ b/html/Index.html
@@ -47,6 +47,11 @@
                                             <i class="input-icon uil uil-lock-alt"></i>
                                             <div id=errorcontra2 class="alert alert-danger" role="alert"></div>
                                         </div>
+                                        <button type="submit" class="btn btn-primary">Validar</button>
+                                        <br>
+                                        <br>
+                                        <button type="reset" class="btn btn-danger">Limpiar</button>
+
 
                                     </div>
                                 </div>
