--- a/html/Signup.html
+++ b/html/Signup.html
@@ -92,7 +92,7 @@
                 
 
                 //ocultar boton Registrar
-                $('#btn-registrar').hide();
+                $('#btn-registrar').show();
 
                 $("#btn-validar").click(function(){
                 event.preventDefault();
@@ -208,7 +208,7 @@
                     //mostrar boton registrar 
 
                 
-
+                    //boton limpiar oculta los errores
                     $('#btn-limpiar').click(function(){
                         $("#errorusuario1").hide();
                         $('#errorusuario2').hide();
